--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-neutral-900;
+}
+
+.container {
+  @apply max-w-screen-lg mx-auto px-5;
+}
